# dev-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  IMPLEMENTATION_PLAN.md  KB_MCP_IMPLEMENTATION.md  KB_SERVICE_SETUP.md  KB_TCP_MIGRATION.md  KB_TESTS_SUMMARY.md  KB_TOOLS_CHECKLIST.md  KB_TOOLS_README.md  KB_TOOLS_SUMMARY.md  commit_changes.bat  diagnose-kb.js  docker-compose.yml  package-lock.json  package.json  test-kb-build.mjs  test-kb-connection.js  test-kb-tools.md  tsconfig.json
docs/: KB_TOOLS_GUIDE.md
global/: CODING_STYLE.md  FRAMEWORKS.md  REVIEW_STANDARDS.md  STEERING.md
kb-service/: CMakeLists.txt  DOCKER_TEST_FIXES.md  Dockerfile  README.md  TESTING.md  TEST_REPORT.md  WINDOWS_SETUP.md  run_tests.sh
kb-service/include/: embedding_service.h  knowledge_base.h  request_handler.h  server.h
kb-service/src/: embedding_service.cpp  knowledge_base.cpp  main.cpp  request_handler.cpp  server.cpp
kb-service/test/: README.md  integration_test.cpp  knowledge_base_test.cpp
src/: config.ts  index.ts  logger.ts
src/ai/: orchestrator.ts  system-prompt.ts
src/kb/: kb-client.ts
src/mcp/: dev-bot-server.ts
src/whatsapp/: client.ts
test/: README-KB-TESTS.md  coder-kb-integration.test.ts  kb-mcp-tools.test.ts  mcp-tools.test.ts  orchestrator.test.ts  system-prompt.test.ts
